quorum/test/tests/TypeChecker/Fail/InstanceTypeUnrelatedTypes.quorum
class Main
    action main
        A a
        boolean result
        if a is a D 
            result = true
        end
        else 
            result = false
        end
    end
end